# 3DVolume

./: CMakeLists.txt  README.md
assets/: resources.qrc
assets/icons/: 3DVolume.rc
assets/presets/: defualt-preset.xml
src/Chart/: ColorTFChart.cpp  ColorTFChart.h  OpacityTFChart.cpp
src/Core/: CropImage.cpp  CropImage.h  Line.cpp  Line.h  Sculpture.cpp  Sculpture.h  Sphere.cpp  Sphere.h  TransferFunction.cpp
src/GUI/: BinaryFileDialog.cpp  BinaryFileDialog.h  CropSequenceDialog.cpp  CropSequenceDialog.h  MainWindow.cpp  MainWindow.h  PreferencesDialog.cpp  PreferencesDialog.h  ProgressDialog.cpp  ProgressDialog.h  binaryFileDialog.ui  cropSequenceDialog.ui  mainwindow.ui  preferencesdialog.ui
src/Interactor/: InteractorStyleCropImage.cpp  InteractorStyleCropImage.h  InteractorStylePlaneImage.cpp  InteractorStylePlaneImage.h
src/Settings/: Backgrounds.cpp  Backgrounds.h
src/Table/: MeasureResultTable.cpp  MeasureResultTable.h
src/Util/: Geometry.cpp  Geometry.h  Measures.h  ReadBin.cpp  ReadBin.h  Sequence.cpp  Sequence.h  Utils.cpp  Utils.h
src/Widget/: ImagePlaneWidget.cpp  ImagePlaneWidget.h
